# Trapper

./: .env.example  .replit  README.md  main.py  pyproject.toml  requirements.txt
src/: bot.py
src/commands/: basic.py  settings.py
src/utils/: keep_alive.py  server_settings.py
